--- a/index.html
+++ b/index.html
@@ -2,15 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASIBUKA Group</title>
-    <link rel="icon" type="image/ico" href="/img/ASIBUKA-blue.png">
-    <link rel="shortcut icon" type="image/ico" href="/img/ASIBUKA-blue.png">
-    <meta id="ogTitle" property="og:title" content="ASIBUKA Group" />
-    <meta id="ogSiteName" property="og:site_name" content="ASIBUKA Group" />
-    <meta id="ogDesc" property="og:description" content="ASIBUKA Group Official Site" />
-    <meta id="themeColor" name="theme-color" content="#004aad">
+    <meta name="description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta name="keywords" content="ASIBUKA, ASIBUKA Group, Investasi, UMKM, Bisnis">
+    <meta name="author" content="ASIBUKA Group">
+    <meta name="robots" content="index, follow">
+    <!-- Facebook Open Graph -->
+    <meta property="og:title" content="ASIBUKA Group">
+    <meta property="og:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta property="og:image" content="/img/ASIBUKA-blue.png">
+    <meta property="og:url" content="https://www.asibuka.com">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="ASIBUKA Group">
+    <meta name="twitter:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
+    <meta name="twitter:image" content="/img/ASIBUKA-blue.png">
+    <!-- Canonical -->
+    <link rel="canonical" href="https://www.asibuka.com">
+    <!-- Favicon -->
+    <link rel="icon" href="/img/ASIBUKA-blue.png" type="image/x-icon">
+     <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "ASIBUKA Group",
+      "description": "ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.",
+      "url": "https://www.asibuka.com"
+    }
+    </script>
+    
     <style>
         html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
     </style>
