--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ASIBUKA Group">
     <meta name="twitter:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
-    <meta name="twitter:image" content="/img/ASIBUKA-blue.png">
+    <meta name="twitter:image" content="img/ASIBUKA-blue.png">
     <!-- Canonical -->
     <link rel="canonical" href="https://www.asibuka.com">
     <!-- Favicon -->
-    <link rel="icon" href="/img/ASIBUKA-blue.png" type="image/x-icon">
+    <link rel="icon" href="files/favicon.ico" type="image/x-icon">
      <!-- Structured Data -->
     <script type="application/ld+json">
     {
