--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    xxx
+    <a href='https://blog.asibuka.com' target='_blank' title='ASIBUKA Blog'>ASIBUKA Blog</a>
 </body>
 
 </html>
