--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <!-- Facebook Open Graph -->
     <meta property="og:title" content="ASIBUKA Group">
     <meta property="og:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
-    <meta property="og:image" content="/img/ASIBUKA-blue.png">
+    <meta property="og:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
     <meta property="og:url" content="https://www.asibuka.com">
     <meta property="og:type" content="website">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ASIBUKA Group">
     <meta name="twitter:description" content="ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.">
-    <meta name="twitter:image" content="https://www.asibuka.com/ASIBUKA-blue.png">
+    <meta name="twitter:image" content="https://www.asibuka.com/files/ASIBUKA-blue.png">
     <!-- Canonical -->
     <link rel="canonical" href="https://www.asibuka.com">
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/files/favicon.ico" type="image/x-icon">
      <!-- Structured Data -->
     <script type="application/ld+json">
     {
