--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Canonical -->
     <link rel="canonical" href="https://www.asibuka.com">
     <!-- Favicon -->
-    <link rel="icon" href="/files/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
      <!-- Structured Data -->
     <script type="application/ld+json">
     {
