--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
       "url": "https://www.asibuka.com"
     }
     </script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         *{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;color:#333}.container{text-align:center;background-color:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px #0000001a;max-width:400px;width:100%}.bio{margin-bottom:20px}.profile-pic{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:10px}h1{font-size:24px;margin-bottom:10px}.bio-description{font-size:16px;color:#666;margin-bottom:20px}.links{display:flex;flex-direction:column;gap:10px}.link{text-decoration:none;padding:10px;background-color:#4CAF50;color:#fff;border-radius:5px;font-size:16px;transition:background-color .3s ease}.link:hover{background-color:#45a049}
     </style>
@@ -42,7 +40,7 @@
 <body>
     <div class="container">
         <div class="bio">
-            <img src="your-photo.jpg" alt="Your Name" class="profile-pic">
+            <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title='ASIBUKA Group' class="profile-pic">
             <h1>Your Name</h1>
             <p class="bio-description">Short description or bio about yourself.</p>
         </div>
