--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="bio">
             <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title="ASIBUKA Group" class="profile-pic">
             <h1>ASIBUKA Group</h1>
-            <p class="bio-description">Short description or bio about ASIBUKA Group.</p>
+            <p class="bio-description">ASIBUKA Group adalah perusahaan yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional.</p>
             <div class="social-icons">
                 <a href="https://twitter.com" class="icon" title="Twitter">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
