--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     }
     </script>
     <style>
-        *{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;color:#333}.container{text-align:center;background-color:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px #0000001a;max-width:400px;width:100%}.bio{margin-bottom:20px}.profile-pic{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:10px}h1{font-size:24px;margin-bottom:10px;color:#004AAD}.bio-description{font-size:16px;color:#666;margin-bottom:15px}.social-icons{display:flex;justify-content:center;gap:15px;margin-bottom:20px}.icon{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;background-color:#ddd;border-radius:50%;transition:transform .3s ease,background-color .3s ease}.icon svg{width:24px;height:24px;fill:#004AAD;transition:fill .3s ease}.icon:hover{background-color:#004AAD;transform:scale(1.1)}.icon:hover svg{fill:#fff}.links{display:flex;flex-direction:column;gap:10px}.link{text-decoration:none;padding:10px;background-color:#004AAD;color:#fff;border-radius:5px;font-size:16px;transition:background-color .3s ease,transform .3s ease}.link:hover{background-color:#003580;transform:translateY(-2px)}
+        *{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;color:#333}h2{font-size:20px;color:#004AAD;margin-bottom:15px;position:relative;display:inline-block;padding-bottom:8px}h2::after{content:"";position:absolute;left:50%;bottom:0;width:80%;height:3px;background:linear-gradient(to right,transparent,#004AAD,transparent);transform:translateX(-50%)}.container{text-align:center;background-color:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px #0000001a;max-width:400px;width:100%}.bio{margin-bottom:20px}.profile-pic{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:10px}h1{font-size:24px;margin-bottom:10px;color:#004AAD}.bio-description{font-size:16px;color:#666;margin-bottom:15px}.social-icons{display:flex;justify-content:center;gap:15px;margin-bottom:20px}.icon{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;background-color:#ddd;border-radius:50%;transition:transform .3s ease,background-color .3s ease}.icon svg{width:24px;height:24px;fill:#004AAD;transition:fill .3s ease}.icon:hover{background-color:#004AAD;transform:scale(1.1)}.icon:hover svg{fill:#fff}.links{display:flex;flex-direction:column;gap:10px}.link{text-decoration:none;padding:10px;background-color:#004AAD;color:#fff;border-radius:5px;font-size:16px;transition:background-color .3s ease,transform .3s ease}.link:hover{background-color:#003580;transform:translateY(-2px)}
     </style>
 </head>
 <body>
@@ -56,6 +56,7 @@
                 </a>
             </div>
         </div>
+        <h2>Our Projects</h2>
         <div class="links">
             <a href="https://link1.com" class="link">Link 1</a>
             <a href="https://link2.com" class="link">Link 2</a>
