--- a/index.html
+++ b/index.html
@@ -34,10 +34,25 @@
     }
     </script>
     <style>
-        *{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;color:#333}h2{font-size:20px;color:#004AAD;margin-bottom:15px;position:relative;display:inline-block;padding-bottom:8px}h2::after{content:"";position:absolute;left:50%;bottom:0;width:80%;height:3px;background:linear-gradient(to right,transparent,#004AAD,transparent);transform:translateX(-50%)}.container{text-align:center;background-color:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px #0000001a;max-width:400px;width:100%}.bio{margin-bottom:20px}.profile-pic{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:10px}h1{font-size:24px;margin-bottom:10px;color:#004AAD}.bio-description{font-size:16px;color:#666;margin-bottom:15px}.social-icons{display:flex;justify-content:center;gap:15px;margin-bottom:20px}.icon{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;background-color:#ddd;border-radius:50%;transition:transform .3s ease,background-color .3s ease}.icon svg{width:24px;height:24px;fill:#004AAD;transition:fill .3s ease}.icon:hover{background-color:#004AAD;transform:scale(1.1)}.icon:hover svg{fill:#fff}.links{display:flex;flex-direction:column;gap:10px}.link{text-decoration:none;padding:10px;background-color:#004AAD;color:#fff;border-radius:5px;font-size:16px;transition:background-color .3s ease,transform .3s ease}.link:hover{background-color:#003580;transform:translateY(-2px)}
+        *{margin:0;padding:0;box-sizing:border-box}body{font-family:Arial,sans-serif;background-color:#f0f0f0;display:flex;justify-content:center;align-items:center;height:100vh;color:#333}h2{font-size:20px;color:#004AAD;margin-bottom:15px;position:relative;display:inline-block;padding-bottom:8px}h2::after{content:"";position:absolute;left:50%;bottom:0;width:80%;height:3px;background:linear-gradient(to right,transparent,#004AAD,transparent);transform:translateX(-50%)}.container{text-align:center;background-color:#fff;border-radius:10px;padding:20px;box-shadow:0 4px 10px #0000001a;max-width:400px;width:100%}.bio{margin-bottom:20px}.profile-pic{width:120px;height:120px;border-radius:50%;object-fit:cover;margin-bottom:10px}h1{font-size:24px;margin-bottom:10px;color:#004AAD}.bio-description{font-size:16px;color:#666;margin-bottom:15px}.social-icons{display:flex;justify-content:center;gap:15px;margin-bottom:20px}.icon{display:inline-flex;align-items:center;justify-content:center;width:40px;height:40px;background-color:#ddd;border-radius:50%;transition:transform .3s ease,background-color .3s ease}.icon svg{width:24px;height:24px;fill:#004AAD;transition:fill .3s ease}.icon:hover{background-color:#004AAD;transform:scale(1.1)}.icon:hover svg{fill:#fff}.links{display:flex;flex-direction:column;gap:10px}.link{text-decoration:none;padding:10px;background-color:#004AAD;color:#fff;border-radius:5px;font-size:16px;transition:background-color .3s ease,transform .3s ease}.link:hover{background-color:#003580;transform:translateY(-2px)}*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}.floating-navbar{position:fixed;top:15px;left:50%;transform:translateX(-50%);background:#004AAD;padding:10px 20px;border-radius:10px;box-shadow:0 4px 10px #0000001a;z-index:1000}.nav-menu{list-style:none;display:flex;gap:20px}.nav-menu li{position:relative}.nav-menu a{text-decoration:none;color:#fff;font-size:16px;padding:10px;display:block;transition:.3s}.nav-menu a:hover{background:#003580;border-radius:5px}.dropdown-menu{position:absolute;top:100%;left:0;background:#fff;width:150px;border-radius:5px;display:none;box-shadow:0 4px 10px #0000001a}.dropdown-menu li{display:block}.dropdown-menu a{color:#004AAD;padding:10px;transition:.3s}.dropdown-menu a:hover{background:#f0f0f0}.content{padding:100px 20px;text-align:center}@media (max-width: 600px){.floating-navbar{width:90%;text-align:center}.nav-menu{flex-direction:column;gap:5px}.dropdown-menu{width:100%}}
     </style>
 </head>
 <body>
+    <nav class="floating-navbar" itemscope itemtype="https://schema.org/SiteNavigationElement">
+        <ul class="nav-menu">
+            <li itemprop="name"><a href="#" itemprop="url">Home</a></li>
+            <li class="dropdown" itemprop="name">
+                <a href="#" itemprop="url">Services ▾</a>
+                <ul class="dropdown-menu">
+                    <li itemprop="name"><a href="#" itemprop="url">Web Design</a></li>
+                    <li itemprop="name"><a href="#" itemprop="url">SEO</a></li>
+                    <li itemprop="name"><a href="#" itemprop="url">Marketing</a></li>
+                </ul>
+            </li>
+            <li itemprop="name"><a href="#" itemprop="url">About</a></li>
+            <li itemprop="name"><a href="#" itemprop="url">Contact</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="bio">
             <img src="/files/ASIBUKA-Blue.png" alt="ASIBUKA Group" title="ASIBUKA Group" class="profile-pic">
