--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     <script>
-        document.addEventListener("DOMContentLoaded",function(){const e=document.querySelectorAll(".dropdown");e.forEach(e=>{e.addEventListener("click",function(e){e.stopPropagation();const n=this.querySelector(".dropdown-menu");n.style.display="block"===n.style.display?"none":"block"})}),document.addEventListener("click",function(){document.querySelectorAll(".dropdown-menu").forEach(e=>{e.style.display="none"})})});
+        document.addEventListener("DOMContentLoaded",function(){const e=document.getElementById("menu-toggle"),n=document.getElementById("nav-menu"),t=document.querySelectorAll(".dropdown");e.addEventListener("click",function(){n.classList.toggle("active")}),t.forEach(e=>{e.addEventListener("click",function(e){e.stopPropagation();const n=this.querySelector(".dropdown-menu");n.style.display="block"===n.style.display?"none":"block"})}),document.addEventListener("click",function(){document.querySelectorAll(".dropdown-menu").forEach(e=>{e.style.display="none"})})});
     </script>
 </body>
 </html>
